--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@nestjs/platform-express": "^11.0.1",
     "bullmq": "^5.58.5",
     "ioredis": "^5.7.0",
+    "nestjs-pino": "^4.4.0",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
