performance(users): use redis cache

--- a/env_files/development.env
+++ b/env_files/development.env
@@ -8,3 +8,7 @@ MESSAGE_QUEUE_VALKEY_PORT="6380"
 
 CACHE_VALKEY_HOST="127.0.0.1"
 CACHE_VALKEY_PORT="6379"
+
+CACHE_TTL_USERS=3600
+
+CACHE_PREFIX_USERS="users"
