--- a/env_files/production.env
+++ b/env_files/production.env
@@ -8,3 +8,7 @@ MESSAGE_QUEUE_VALKEY_PORT="6380"
 
 CACHE_VALKEY_HOST="valkey-cache"
 CACHE_VALKEY_PORT="6379"
+
+CACHE_TTL_USERS=3600
+
+CACHE_PREFIX_USERS="users"
