feat(auth): use JWT for protection

--- a/env_files/development.env
+++ b/env_files/development.env
@@ -9,6 +9,9 @@ MESSAGE_QUEUE_VALKEY_PORT="6380"
 CACHE_VALKEY_HOST="127.0.0.1"
 CACHE_VALKEY_PORT="6379"
 
+JWT_SECRET="CHANGE THIS VALUE"
+JWT_EXPIRES_IN="86400s"
+
 CACHE_TTL_USERS=3600
 
 CACHE_PREFIX_USERS="users"
