--- a/package.json
+++ b/package.json
@@ -30,12 +30,26 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.64.0",
+    "@opentelemetry/context-async-hooks": "^2.1.0",
+    "@opentelemetry/core": "^2.1.0",
+    "@opentelemetry/exporter-jaeger": "^2.1.0",
+    "@opentelemetry/exporter-prometheus": "^0.205.0",
+    "@opentelemetry/instrumentation-nestjs-core": "^0.51.0",
+    "@opentelemetry/instrumentation-pino": "^0.52.0",
+    "@opentelemetry/instrumentation-runtime-node": "^0.19.0",
+    "@opentelemetry/propagator-b3": "^2.1.0",
+    "@opentelemetry/propagator-jaeger": "^2.1.0",
+    "@opentelemetry/sdk-node": "^0.205.0",
+    "@opentelemetry/sdk-trace-base": "^2.1.0",
     "@prisma/client": "^6.15.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.58.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.7.0",
+    "nestjs-otel": "^7.0.1",
     "nestjs-pino": "^4.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
