feat(seeder): seed roles and users

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed:users": "ts-node -r tsconfig-paths/register src/scripts/seed-users.ts"
+    "seed:roles": "ts-node -r tsconfig-paths/register src/scripts/seed-roles.ts",
+    "seed:users": "ts-node -r tsconfig-paths/register src/scripts/seed-users.ts",
+    "seed:all": "ts-node -r tsconfig-paths/register src/scripts/seed-all.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -62,7 +65,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
-    "@faker-js/faker": "^10.0.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
