--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@langchain/anthropic": "^0.3.28",
+    "@langchain/community": "^0.3.56",
+    "@langchain/core": "^0.3.76",
+    "@langchain/openai": "^0.6.12",
     "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -52,6 +56,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.7.0",
+    "langchain": "^0.3.34",
     "nestjs-otel": "^7.0.1",
     "nestjs-pino": "^4.4.0",
     "passport": "^0.7.0",
