feat(configs): add more params

--- a/env_files/production.env
+++ b/env_files/production.env
@@ -12,6 +12,33 @@ CACHE_VALKEY_PORT="6379"
 JWT_SECRET="CHANGE THIS VALUE"
 JWT_EXPIRES_IN="86400s"
 
-CACHE_TTL_USERS=3600
+OPENAI_API_KEY=your-api-key
+ANTHROPIC_API_KEY=your-api-key
 
+CACHE_TTL_ROLES=3600
+CACHE_TTL_USERS=3600
+CACHE_TTL_KNOWLEDGES=3600
+CACHE_TTL_KNOWLEDGE_FILES=3600
+CACHE_TTL_CUSTOMERS=3600
+CACHE_TTL_CUSTOMER_STAFFS=3600
+CACHE_TTL_CHAT_AGENTS=3600
+CACHE_TTL_CHAT_SESSIONS=3600
+CACHE_TTL_CHAT_MESSAGES=3600
+
+CACHE_PREFIX_ROLES="roles"
 CACHE_PREFIX_USERS="users"
+CACHE_PREFIX_KNOWLEDGES="knowledges"
+CACHE_PREFIX_KNOWLEDGE_FILES="knowledge-files"
+CACHE_PREFIX_CUSTOMERS="customers"
+CACHE_PREFIX_CUSTOMER_STAFFS="customer-staffs"
+CACHE_PREFIX_CHAT_AGENTS="chat-agents"
+CACHE_PREFIX_CHAT_SESSIONS="chat-sessions"
+CACHE_PREFIX_CHAT_MESSAGES="chat-messages"
+
+INBOUND_CHAT_DEDUPLICATION_TTL_SAMPLE=300
+INBOUND_CHAT_DEDUPLICATION_TTL_SLACK=300
+INBOUND_CHAT_DEDUPLICATION_TTL_LARK=300
+
+INBOUND_CHAT_SESSION_TTL_SAMPLE=3600
+INBOUND_CHAT_SESSION_TTL_SLACK=3600
+INBOUND_CHAT_SESSION_TTL_LARK=3600
