feat(docker): run qdrant container, scape qdrant metrics using prometheus

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ x-postgres-config: &postgres-config
 x-image-versions: &image-versions
   POSTGRES_IMAGE: postgres:17.6-alpine3.22
   VALKEY_IMAGE: valkey/valkey:8.1.3-alpine
+  QDRANT_IMAGE: qdrant/qdrant:v1.15
   PROMETHEUS_IMAGE: prom/prometheus:v3.5.0
   GRAFANA_IMAGE: grafana/grafana:latest
   POSTGRES_EXPORTER_IMAGE: prometheuscommunity/postgres-exporter:v0.16.0
@@ -27,6 +28,7 @@ x-port-config: &port-config
   POSTGRES_PORT: "5432:5432"
   VALKEY_MQ_PORT: "6380:6379"
   VALKEY_CACHE_PORT: "6379:6379"
+  QDRANT_PORT: "6333:6333"
   PROMETHEUS_PORT: "9090:9090"
   GRAFANA_PORT: "3001:3000"
   POSTGRES_EXPORTER_PORT: "9187:9187"
@@ -94,6 +96,23 @@ services:
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "valkey-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Qdrant Vector Database
+  qdrant:
+    image: ${QDRANT_IMAGE:-qdrant/qdrant:v1.15}
+    container_name: dojotek-ai-chatbot-qdrant
+    ports:
+      - ${QDRANT_PORT:-6333:6333}
+    volumes:
+      - dojotek_ai_chatbot_qdrant_data:/qdrant/storage
+    networks:
+      - ${NETWORK_NAME:-dojotek-ai-chatbot-network}
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:6333/"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -199,6 +218,7 @@ volumes:
   dojotek_ai_chatbot_postgres_data:
   dojotek_ai_chatbot_valkey_mq_data:
   dojotek_ai_chatbot_valkey_cache_data:
+  dojotek_ai_chatbot_qdrant_data:
   dojotek_ai_chatbot_grafana_data:
 
 networks:
