--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -43,3 +43,11 @@ scrape_configs:
     metrics_path: '/metrics'
     scrape_interval: 15s
     scrape_timeout: 10s
+
+  # Qdrant Vector Database Metrics
+  - job_name: 'qdrant'
+    static_configs:
+      - targets: ['qdrant:6333']
+    metrics_path: '/metrics'
+    scrape_interval: 15s
+    scrape_timeout: 10s
