chore(env): add more env parameters

--- a/env_files/production.env
+++ b/env_files/production.env
@@ -1,20 +1,42 @@
-NODE_ENV="production"
-LOG_LEVEL="info"
+# LLM inference secret keys
+OPENAI_API_KEY="your-api-key"
+ANTHROPIC_API_KEY="your-api-key"
 
-PORT=3000
-
-MESSAGE_QUEUE_VALKEY_HOST="valkey-mq"
-MESSAGE_QUEUE_VALKEY_PORT="6380"
-
-CACHE_VALKEY_HOST="valkey-cache"
-CACHE_VALKEY_PORT="6379"
-
+# JSON Web Token
 JWT_SECRET="CHANGE THIS VALUE"
 JWT_EXPIRES_IN="86400s"
 
-OPENAI_API_KEY=your-api-key
-ANTHROPIC_API_KEY=your-api-key
+# File storage parameters
+STORAGE_PROVIDER="s3"
 
+AWS_REGION="CHANGE THIS VALUE"
+AWS_ACCESS_KEY_ID="CHANGE THIS VALUE"
+AWS_SECRET_ACCESS_KEY="CHANGE THIS VALUE"
+S3_BUCKET_NAME="CHANGE THIS VALUE"
+
+# Vector parameters
+VECTOR_PROVIDER="openai"
+VECTOR_MODEL="text-embedding-3-small"
+VECTOR_DATABASE="qdrant"
+
+QDRANT_DATABASE_URL="https://127.0.0.1:6333"
+
+# Node.js params
+NODE_ENV="production"
+LOG_LEVEL="info"
+
+# HTTP listening port
+PORT=3000
+
+# Redis/Valkey for message queue data
+MESSAGE_QUEUE_VALKEY_HOST="valkey-mq"
+MESSAGE_QUEUE_VALKEY_PORT="6380"
+
+# Redis/Valkey for cache data
+CACHE_VALKEY_HOST="valkey-cache"
+CACHE_VALKEY_PORT="6379"
+
+# Cache key TTL (expire time) in seconds
 CACHE_TTL_ROLES=3600
 CACHE_TTL_USERS=3600
 CACHE_TTL_KNOWLEDGES=3600
@@ -25,6 +47,7 @@ CACHE_TTL_CHAT_AGENTS=3600
 CACHE_TTL_CHAT_SESSIONS=3600
 CACHE_TTL_CHAT_MESSAGES=3600
 
+# Cache key prefix by module
 CACHE_PREFIX_ROLES="roles"
 CACHE_PREFIX_USERS="users"
 CACHE_PREFIX_KNOWLEDGES="knowledges"
@@ -35,10 +58,12 @@ CACHE_PREFIX_CHAT_AGENTS="chat-agents"
 CACHE_PREFIX_CHAT_SESSIONS="chat-sessions"
 CACHE_PREFIX_CHAT_MESSAGES="chat-messages"
 
+# Deduplication TTL for inbound message in seconds
 INBOUND_CHAT_DEDUPLICATION_TTL_SAMPLE=300
 INBOUND_CHAT_DEDUPLICATION_TTL_SLACK=300
 INBOUND_CHAT_DEDUPLICATION_TTL_LARK=300
 
+# Chat session TTL, before creating a new chat session
 INBOUND_CHAT_SESSION_TTL_SAMPLE=3600
 INBOUND_CHAT_SESSION_TTL_SLACK=3600
 INBOUND_CHAT_SESSION_TTL_LARK=3600
