--- a/env_files/development.env
+++ b/env_files/development.env
@@ -46,6 +46,7 @@ CACHE_TTL_CUSTOMER_STAFFS=3600
 CACHE_TTL_CHAT_AGENTS=3600
 CACHE_TTL_CHAT_SESSIONS=3600
 CACHE_TTL_CHAT_MESSAGES=3600
+CACHE_TTL_CHAT_AGENT_KNOWLEDGES=3600
 
 # Cache key prefix by module
 CACHE_PREFIX_ROLES="roles"
@@ -57,6 +58,7 @@ CACHE_PREFIX_CUSTOMER_STAFFS="customer-staffs"
 CACHE_PREFIX_CHAT_AGENTS="chat-agents"
 CACHE_PREFIX_CHAT_SESSIONS="chat-sessions"
 CACHE_PREFIX_CHAT_MESSAGES="chat-messages"
+CACHE_PREFIX_CHAT_AGENT_KNOWLEDGES="chat-agent-knowledges"
 
 # Deduplication TTL for inbound message in seconds
 INBOUND_CHAT_DEDUPLICATION_TTL_SAMPLE=300
