--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@langchain/anthropic": "^0.3.28",
     "@langchain/community": "^0.3.56",
     "@langchain/core": "^0.3.76",
+    "@langchain/langgraph": "^0.4.9",
     "@langchain/openai": "^0.6.12",
+    "@langchain/qdrant": "^0.1.3",
+    "@langchain/textsplitters": "^0.1.0",
     "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -76,7 +79,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^13.0.0",
-    "word-extractor": "^1.0.4"
+    "word-extractor": "^1.0.4",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
