feat(model-provider-secrets): store BYOK on infisical

--- a/env_files/production.env
+++ b/env_files/production.env
@@ -21,6 +21,14 @@ VECTOR_DATABASE="qdrant"
 
 QDRANT_DATABASE_URL="https://127.0.0.1:6333"
 
+# Infisical secret manager parameters
+INFISICAL_SITE_URL="CHANGE THIS VALUE"
+INFISICAL_CLIENT_ID="CHANGE THIS VALUE"
+INFISICAL_CLIENT_SECRET="CHANGE THIS VALUE"
+INFISICAL_ENVIRONMENT="dev"
+INFISICAL_PROJECT_ID="CHANGE THIS VALUE"
+INFISICAL_MODEL_PROVIDER_SECRETS_PATH="/MODEL_PROVIDER_SECRETS"
+
 # Node.js params
 NODE_ENV="production"
 LOG_LEVEL="info"
