feat(lark-feishu): fully connected inbound, RAG inference, outbound

--- a/env_files/production.env
+++ b/env_files/production.env
@@ -29,6 +29,13 @@ INFISICAL_ENVIRONMENT="dev"
 INFISICAL_PROJECT_ID="CHANGE THIS VALUE"
 INFISICAL_MODEL_PROVIDER_SECRETS_PATH="/MODEL_PROVIDER_SECRETS"
 
+# Lark Suite parameters
+LARK_APP_ID="CHANGE THIS VALUE"
+LARK_APP_SECRET="CHANGE THIS VALUE"
+LARK_VERIFICATION_TOKEN="CHANGE THIS VALUE"
+LARK_ENCRYPT_KEY=""
+LARK_HOST=https://open.feishu.cn
+
 # Node.js params
 NODE_ENV="production"
 LOG_LEVEL="info"
@@ -55,7 +62,8 @@ CACHE_TTL_CHAT_AGENTS=3600
 CACHE_TTL_CHAT_SESSIONS=3600
 CACHE_TTL_CHAT_MESSAGES=3600
 CACHE_TTL_CHAT_AGENT_KNOWLEDGES=3600
-CACHE_TTL_SETTINGS=3600
+CACHE_TTL_CHANNELS=3600
+CACHE_TTL_CUSTOMER_STAFF_IDENTITIES=3600
 
 # Cache key prefix by module
 CACHE_PREFIX_ROLES="roles"
@@ -68,7 +76,8 @@ CACHE_PREFIX_CHAT_AGENTS="chat-agents"
 CACHE_PREFIX_CHAT_SESSIONS="chat-sessions"
 CACHE_PREFIX_CHAT_MESSAGES="chat-messages"
 CACHE_PREFIX_CHAT_AGENT_KNOWLEDGES="chat-agent-knowledges"
-CACHE_PREFIX_SETTINGS="settings"
+CACHE_PREFIX_CHANNELS="channels"
+CACHE_PREFIX_CUSTOMER_STAFF_IDENTITIES="customer-staff-identities"
 
 # Deduplication TTL for inbound message in seconds
 INBOUND_CHAT_DEDUPLICATION_TTL_SAMPLE=300
