feat(slack): integration inbound and outbound

--- a/env_files/development.env
+++ b/env_files/development.env
@@ -36,6 +36,14 @@ LARK_VERIFICATION_TOKEN="CHANGE THIS VALUE"
 LARK_ENCRYPT_KEY=""
 LARK_HOST=https://open.feishu.cn
 
+# Slack parameters
+SLACK_TOKEN="CHANGE THIS VALUE"
+SLACK_APP_ID="CHANGE THIS VALUE"
+SLACK_CLIENT_ID="CHANGE THIS VALUE"
+SLACK_CLIENT_SECRET="CHANGE THIS VALUE"
+SLACK_SIGNING_SECRET="CHANGE THIS VALUE"
+SLACK_VERIFICATION_TOKEN="CHANGE THIS VALUE"
+
 # Node.js params
 NODE_ENV="development"
 LOG_LEVEL="debug"
