--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@opentelemetry/sdk-trace-base": "^2.1.0",
     "@prisma/client": "^6.15.0",
     "@qdrant/js-client-rest": "^1.15.1",
+    "@slack/web-api": "^7.11.0",
     "@types/fs-extra": "^11.0.4",
     "@types/uuid": "^11.0.0",
     "@types/word-extractor": "^1.0.3",
